Using ProntoMobile service from within container because injection doesn't work with the bundle configuration

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -19,6 +19,7 @@ services:
 
     pronto_mobile.global.app:
         class: Pronto\MobileBundle\Service\ProntoMobile
+        public: true
 
     #### TWIG EXTENSIONS ####
     Pronto\MobileBundle\Twig\:
