--- a/Resources/config/routing_dev.yaml
+++ b/Resources/config/routing_dev.yaml
@@ -13,3 +13,9 @@ _errors:
 _main:
     resource: routing.yaml
     schemes: [http]
+
+_testing:
+    path: /test/config
+    schemes: [https]
+    defaults:
+        _controller: Pronto\MobileBundle\Controller\Web\DefaultController:testBundleConfigurationAction
