--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,11 @@
         "symfony/proxy-manager-bridge": "^3.4|^4.2",
         "symfony/expression-language": "^3.4|^4.2",
         "composer/semver": "^1.4",
-        "symfony/dotenv": "^4.2"
+        "symfony/dotenv": "^4.2",
+        "myclabs/php-enum": "^1.7"
     },
     "require-dev": {
-        "nelmio/alice": "3.4.2",
+        "nelmio/alice": "^3.5.0",
         "symfony/phpunit-bridge": "^3.4|^4.2"
     },
     "autoload": {
