--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -15,7 +15,7 @@ services:
         public: false
 
     Pronto\MobileBundle\:
-        resource: '../../{Command,Controller,DataFixtures,EventListener,EventSubscriber,Provider,Security,Service,Repository,Validator}'
+        resource: '../../{Command,Controller,DataFixtures,EventListener,EventSubscriber,Middleware,Provider,Security,Service,Repository,Validator}'
 
     pronto_mobile.global.app:
         class: Pronto\MobileBundle\Service\ProntoMobile
