--- a/package.json
+++ b/package.json
@@ -17,20 +17,27 @@
     "trumbowyg": "^2.9.4"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/runtime": "^7.7.2",
+    "babel-eslint": "^10.0.3",
     "css-loader": "^1.0.0",
+    "eslint": "^6.6.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-vue": "^6.0.1",
     "file-loader": "^1.1.11",
     "resolve-url-loader": "2.3.1",
     "sass": "^1.17.0",
     "sass-loader": "7.*",
     "style-loader": "^0.21.0",
-    "vue-template-compiler": "^2.6.5"
+    "vue-loader": "^15.7.2",
+    "vue-template-compiler": "^2.6.10"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "hot": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "csfix": "eslint assets/vue --ext .js,.vue, --fix"
   },
   "keywords": [
     "E-sites",
