--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,10 @@
     "browser": true,
     "es6": true
   },
+  "globals": {
+    "axios": "readonly",
+    "require": "readonly"
+  },
   "extends": [
     "eslint:recommended",
     "plugin:vue/recommended"
