--- a/package.json
+++ b/package.json
@@ -8,35 +8,53 @@
     "ajv": "^6.5.2",
     "chart.js": "^2.7.1",
     "codeflask": "^0.3.0",
+    "core-js": "^3.4.1",
     "font-awesome": "^4.7.0",
     "jquery-ui": "^1.12.1",
     "laravel-mix": "^4.0.14",
     "materialize-css": "^0.100.2",
     "moment": "^2.22.1",
     "sweetalert": "^2.1.0",
-    "trumbowyg": "^2.9.4"
+    "trumbowyg": "^2.9.4",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/runtime": "^7.7.2",
+    "@bit/e-sites.vue.global.form": "^1.1.0",
+    "@bit/e-sites.vue.global.table": "^1.1.1",
+    "@symfony/webpack-encore": "^0.28.0",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "css-loader": "^1.0.0",
+    "element-ui": "^2.12.0",
     "eslint": "^6.6.0",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-vue": "^6.0.1",
     "file-loader": "^1.1.11",
+    "js-cookie": "^2.2.1",
+    "node-sass": "^4.13.0",
     "resolve-url-loader": "2.3.1",
     "sass": "^1.17.0",
     "sass-loader": "7.*",
     "style-loader": "^0.21.0",
+    "vue": "^2.6.10",
     "vue-loader": "^15.7.2",
+    "vue-progress-path": "^0.0.2",
+    "vue-progressbar": "^0.7.5",
     "vue-template-compiler": "^2.6.10"
   },
   "scripts": {
-    "dev": "NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "dev-old": "NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-old": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "hot-old": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production-old": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress",
     "csfix": "eslint assets/vue --ext .js,.vue, --fix"
   },
   "keywords": [
