--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,7 @@
         "symfony/expression-language": "^3.4|^4.2",
         "composer/semver": "^1.4",
         "symfony/dotenv": "^4.2",
-        "myclabs/php-enum": "^1.7",
-        "symfony/webpack-encore-bundle": "^1.7"
+        "myclabs/php-enum": "^1.7"
     },
     "require-dev": {
         "nelmio/alice": "^3.5.0",
