--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "bootstrap": "^4.3.1",
     "css-loader": "^1.0.0",
     "element-ui": "^2.12.0",
     "eslint": "^6.6.0",
