--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "composer/semver": "^1.4",
         "symfony/dotenv": "^4.2",
         "myclabs/php-enum": "^1.7",
-        "opis/json-schema": "^1.0"
+        "opis/json-schema": "^1.0",
+        "symfony/http-client": "^5.0"
     },
     "require-dev": {
         "nelmio/alice": "^3.5.0",
