--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "test": "tests"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.8",
     "ajv": "^6.5.2",
     "chart.js": "^2.7.1",
     "codeflask": "^0.3.0",
@@ -23,8 +26,8 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/runtime": "^7.7.2",
-    "@bit/e-sites.vue.global.form": "^1.1.0",
-    "@bit/e-sites.vue.global.table": "^1.1.1",
+    "@bit/e-sites.vue.global.form": "^1.2.0",
+    "@bit/e-sites.vue.global.table": "^2.0.1",
     "@symfony/webpack-encore": "^0.28.0",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
