--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "trumbowyg": "^2.9.4",
     "vue-router": "^3.1.3",
     "vuedraggable": "^2.23.2",
-    "@bit/e-sites.vue.global.table": "2.0.2"
+    "@bit/e-sites.vue.global.table": "2.0.2",
+    "@bit/e-sites.vue.global.form": "1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
