--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "myclabs/php-enum": "^1.7",
         "opis/json-schema": "^1.0",
         "symfony/http-client": "^5.0",
-        "sensio/framework-extra-bundle": "^5.5"
+        "sensio/framework-extra-bundle": "^5.5",
+        "nesbot/carbon": "^2.30"
     },
     "require-dev": {
         "nelmio/alice": "^3.5.0",
