--- a/Resources/config/routing.yaml
+++ b/Resources/config/routing.yaml
@@ -8,12 +8,18 @@ fos_oauth_server_authorize:
 
 #### LOGIN AND PASSWORD RESET ####
 
-#pronto_mobile_login:
-#    path: /login
-#    schemes: [https]
-#    defaults:
-#        _controller: Pronto\MobileBundle\Controller\Web\AuthenticationController:loginAction
-#
+pronto_mobile_login:
+    path: /login
+    schemes: [https]
+    defaults:
+        _controller: Pronto\MobileBundle\Controller\SPAController::indexAction
+
+pronto_mobile_create_password:
+    path: /password/create/{token}
+    schemes: [https]
+    defaults:
+        _controller: Pronto\MobileBundle\Controller\SPAController::indexAction
+
 #pronto_mobile_logout:
 #    path: /logout
 #    schemes: [https]
@@ -32,11 +38,6 @@ fos_oauth_server_authorize:
 #    defaults:
 #        _controller: Pronto\MobileBundle\Controller\Web\AuthenticationController:resetPasswordAction
 #
-#pronto_mobile_create_password:
-#    path: /password/create/{token}
-#    schemes: [https]
-#    defaults:
-#        _controller: Pronto\MobileBundle\Controller\Web\AuthenticationController:createPasswordAction
 #
 #pronto_mobile_app_users_reset_password:
 #    path: /users/app/password/reset/{token}
