--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "test": "tests"
   },
   "dependencies": {
+    "@bit/e-sites.vue.global.form": "1.2.1",
+    "@bit/e-sites.vue.global.table": "2.0.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.8",
@@ -19,18 +21,15 @@
     "moment": "^2.22.1",
     "sweetalert": "^2.1.0",
     "trumbowyg": "^2.9.4",
+    "vue-i18n": "^8.15.4",
     "vue-router": "^3.1.3",
-    "vuedraggable": "^2.23.2",
-    "@bit/e-sites.vue.global.table": "2.0.2",
-    "@bit/e-sites.vue.global.form": "1.2.1"
+    "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/runtime": "^7.7.2",
-    "@bit/e-sites.vue.global.form": "^1.2.0",
-    "@bit/e-sites.vue.global.table": "^2.0.1",
     "@symfony/webpack-encore": "^0.28.0",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
