--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@bit/e-sites.vue.global.form": "1.2.1",
     "@bit/e-sites.vue.global.table": "2.0.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.8",
     "ajv": "^6.5.2",
@@ -21,6 +22,7 @@
     "moment": "^2.22.1",
     "sweetalert": "^2.1.0",
     "trumbowyg": "^2.9.4",
+    "vue-chartjs": "^3.5.0",
     "vue-i18n": "^8.15.4",
     "vue-router": "^3.1.3",
     "vuedraggable": "^2.23.2"
