--- a/composer.json
+++ b/composer.json
@@ -13,39 +13,40 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
+        "php": "^7.2|^7.4",
         "troovers/browser": "^1.0.0",
         "ramsey/uuid": "^3.8",
-        "doctrine/orm": "^2.5",
-        "awps/font-awesome-php": "^4.7",
+        "doctrine/orm": "^2.7",
         "guzzlehttp/guzzle": "^6.3",
-        "kreait/firebase-php": "^4.13",
+        "kreait/firebase-php": "^4.41",
         "league/flysystem": "^1.0",
         "league/flysystem-sftp": "^1.0",
         "php-http/guzzle6-adapter": "^2.0",
-        "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/translation": "^4.2|^5.0",
-        "symfony/orm-pack": "^1.0",
-        "symfony/form": "^4.2|^5.0",
-        "friendsofsymfony/oauth-server-bundle": "^1.6.1",
-        "symfony/twig-bundle": "^4.2|^5.0",
-        "symfony/templating": "^4.2|^5.0",
-        "symfony/validator": "^4.2|^5.0",
-        "symfony/serializer": "^4.2|^5.0",
-        "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "symfony/proxy-manager-bridge": "^4.2|^5.0",
-        "symfony/expression-language": "^4.2|^5.0",
+        "friendsofsymfony/oauth-server-bundle": "^1.6",
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "composer/semver": "^1.4",
-        "symfony/dotenv": "^4.2|^5.0",
         "myclabs/php-enum": "^1.7",
         "opis/json-schema": "^1.0",
-        "symfony/http-client": "^5.0",
         "sensio/framework-extra-bundle": "^5.5",
-        "nesbot/carbon": "^2.30"
+        "nesbot/carbon": "^2.30",
+        "symfony/dotenv": "^4.2|^5.0",
+        "symfony/event-dispatcher": "^4.2|^5.0",
+        "symfony/expression-language": "^4.2|^5.0",
+        "symfony/form": "^4.2|^5.0",
+        "symfony/http-client": "^4.2|^5.0",
+        "symfony/orm-pack": "^1.0",
+        "symfony/proxy-manager-bridge": "^4.2|^5.0",
+        "symfony/serializer": "^5.0",
+        "symfony/swiftmailer-bundle": "^3.4",
+        "symfony/templating": "^4.2|^5.0",
+        "symfony/translation": "^4.2|^5.0",
+        "symfony/twig-bundle": "^4.2|^5.0",
+        "symfony/validator": "^4.2|^5.0",
+        "symfony/security-bundle": "^4.2|^5.0"
     },
     "require-dev": {
         "nelmio/alice": "^3.5.0",
-        "symfony/phpunit-bridge": "^4.2"
+        "symfony/phpunit-bridge": "^4.2|^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -54,6 +55,12 @@
         "files": [
             "helpers.php"
         ]
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "^5.0"
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
