--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Pronto\\MobileBundle\\": ""
+            "Pronto\\MobileBundle\\": "",
             "Pronto\\MobileBundle\\Tests\\": "Tests\"
         }
     },
