Added first normalizer for push notifications

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -32,6 +32,11 @@ services:
         resource: '../../Twig'
         tags: ['twig.extension']
 
+    #### SERIALIZER ####
+    Pronto\MobileBundle\Serializer\Normalizer\:
+        resource: '../../Serializer/Normalizer'
+        tags: ['serializer.normalizer']
+
 
     #### PRONTO MOBILE DOCTRINE EVENT SUBSCRIBERS ####
     Pronto\MobileBundle\EventListener\HashPasswordSubscriber:
