--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/expression-language": "^4.2",
         "composer/semver": "^1.4",
         "symfony/dotenv": "^4.2",
+        "symfony/mime": "^4.2",
         "myclabs/php-enum": "^1.7"
     },
     "require-dev": {
