--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "symfony/mime": "^4.4",
         "myclabs/php-enum": "^1.7",
         "trikoder/oauth2-bundle": "^3.2",
-        "nyholm/psr7": "^1.3"
+        "nyholm/psr7": "^1.3",
+        "symfony/webpack-encore-bundle": "^1.12"
     },
     "require-dev": {
         "nelmio/alice": "^3.5.0",
