--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,20 +1,4 @@
 {
-    "/Resources/public/js/notifications/statistics.js": "/Resources/public/js/notifications/statistics.js",
-    "/Resources/public/js/app.js": "/Resources/public/js/app.js",
-    "/Resources/public/js/collections/entries.js": "/Resources/public/js/collections/entries.js",
-    "/Resources/public/js/collections/collections.js": "/Resources/public/js/collections/collections.js",
-    "/Resources/public/js/notifications/notifications.js": "/Resources/public/js/notifications/notifications.js",
-    "/Resources/public/js/applications/applications.js": "/Resources/public/js/applications/applications.js",
-    "/Resources/public/js/plugins.js": "/Resources/public/js/plugins.js",
-    "/Resources/public/js/collections/properties.js": "/Resources/public/js/collections/properties.js",
-    "/Resources/public/js/codeflask.js": "/Resources/public/js/codeflask.js",
-    "/Resources/public/js/customers/customers.js": "/Resources/public/js/customers/customers.js",
-    "/Resources/public/js/trumbowyg.js": "/Resources/public/js/trumbowyg.js",
-    "/Resources/public/js/error.js": "/Resources/public/js/error.js",
-    "/Resources/public/js/collections/relationships.js": "/Resources/public/js/collections/relationships.js",
-    "/Resources/public/js/jscolor.js": "/Resources/public/js/jscolor.js",
-    "/Resources/public/js/modal.js": "/Resources/public/js/modal.js",
-    "/Resources/public/js/login.js": "/Resources/public/js/login.js",
-    "/Resources/public/images/logo-login.png": "/Resources/public/images/logo-login.png",
-    "/Resources/public/images/logo-sidemenu.png": "/Resources/public/images/logo-sidemenu.png"
+    "/src/Resources/public/build/js/app.js": "/src/Resources/public/build/js/app.js",
+    "/src/Resources/public/build/css/app.css": "/src/Resources/public/build/css/app.css"
 }
