--- a/package.json
+++ b/package.json
@@ -5,32 +5,43 @@
     "test": "tests"
   },
   "dependencies": {
+    "@symfony/webpack-encore": "^1.5.0",
     "ajv": "^6.5.2",
-    "chart.js": "^2.7.1",
+    "chart.js": "^2.9.4",
     "codeflask": "^0.3.0",
     "font-awesome": "^4.7.0",
     "jquery-ui": "^1.12.1",
-    "laravel-mix": "^4.0.14",
+    "laravel-mix": "^6.0.0",
     "materialize-css": "^0.100.2",
     "moment": "^2.22.1",
     "sweetalert": "^2.1.0",
-    "trumbowyg": "^2.9.4"
+    "trumbowyg": "^2.24.0"
   },
   "devDependencies": {
-    "css-loader": "^1.0.0",
+    "@bit/e-sites.vue.global.form": "^1.3.10",
+    "@bit/e-sites.vue.global.table": "^2.1.2",
+    "axios": "^0.21.1",
+    "css-loader": "^1.0.1",
+    "element-ui": "^2.15.3",
     "file-loader": "^1.1.11",
+    "lodash": "^4.17.21",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "resolve-url-loader": "2.3.1",
-    "sass": "^1.17.0",
-    "sass-loader": "7.*",
+    "sass": "^1.35.1",
+    "sass-loader": "^10.2.0",
     "style-loader": "^0.21.0",
-    "vue-template-compiler": "^2.6.5"
+    "vue": "^2.6.14",
+    "vue-i18n": "^8.24.5",
+    "vue-loader": "^15.9.7",
+    "vue-template-compiler": "^2.6.14"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "production": "mix --production"
   },
   "keywords": [
     "E-sites",
